<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@drawable/dialog_background"
    android:elevation="4dp"
    android:padding="16dp">

    <ImageView
        android:id="@+id/dialog_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/sticker_6"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="165dp"
        android:layout_height="25dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:text="@string/confirmation"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@id/dialog_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="218dp"
        android:layout_height="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="8dp"
        android:gravity="start"
        android:text="@string/are_you_sure_you_want_to_log_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/dialog_icon"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_message">

        <Button
            android:id="@+id/dialog_positive_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/yes" />

        <Button
            android:id="@+id/dialog_negative_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/no" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
