...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/md_theme_inversePrimary"
            app:titleTextColor="@color/md_theme_onSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/story_app"
            app:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            tools:alpha="100">

            <ImageButton
                android:id="@+id/logoutButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/baseline_logout_24"
                android:contentDescription="@string/todo"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_gravity="end"
...
