<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.core.create.CreateFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/md_theme_secondary"
            app:titleTextColor="@color/md_theme_onPrimary"
            android:alpha="0"
            app:title="@string/create_story"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:navigationIconTint="@color/md_theme_onSurface"
            tools:alpha="100" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/lpiLoading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:indeterminate="true"
            app:indicatorColor="@color/md_theme_primary"
            app:trackCornerRadius="2dp"
            app:trackThickness="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:elevation="4dp"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/ivStory"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:alpha="0"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/outline_image_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:alpha="100"
            tools:src="@drawable/sticker_6" />

        <Button
            android:id="@+id/btnCamera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            android:alpha="0"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/ivStory"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnGallery"
            tools:alpha="100" />

        <Button
            android:id="@+id/btnGallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            android:alpha="0"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/ivStory"
            app:layout_constraintStart_toEndOf="@id/btnCamera"
            app:layout_constraintEnd_toEndOf="parent"
            tools:alpha="100" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:autofillHints=""
            android:padding="8dp"
            android:layout_margin="16dp"
            android:ems="10"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:hint="@string/description"
            android:alpha="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnGallery"
            tools:ignore="SpeakableTextPresentCheck"
            tools:alpha="100" />

        <LinearLayout
            android:id="@+id/checkboxLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp"
            android:alpha="0"
            app:layout_constraintTop_toBottomOf="@id/etDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_vertical"
            tools:alpha="100">

            <CheckBox
                android:id="@+id/cbAgree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree_label"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnUpload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            android:layout_margin="16dp"
            android:layout_marginTop="12dp"
            android:alpha="0"
            app:layout_constraintTop_toBottomOf="@id/checkboxLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:alpha="100" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>